<resources>
    <string name="app_name">Telehealth App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_underline"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_using_the_app">By using the app you agree to our</string>
    <string name="terms_and_conditions"><u> \"Terms and Conditions\" and \"Privacy Policy\"</u></string>
    <string name="terms_condition_and_privacy_policy"><![CDATA[Terms & Condition and Privacy Policy]]></string>
    <string name="terms">Lorem ipsum dolor sit amet consectetur
                            adipiscing elit sed do eiusmod tempor
                            incididunt ut labore et dolore magna
                            aliqua. Eu ultrices vitae auctor eu augue ut
                            lectus. Sed felis eget velit aliquet sagittis
                            id. Purus in massa tempor nec feugiat.
                            Quis ipsum suspendisse ultrices gravida.
                            Egestas tellus rutrum tellus pellentesque.
                            Consectetur a erat nam at lectus urna duis
                            convallis. Egestas sed sed risus pretium
                            quam vulputate. Metus dictum at tempor
                            commodo. Pulvinar etiam non quam lacus
                            suspendisse faucibus interdum. Aenean
                            sed adipiscing diam donec adipiscing
                            tristique risus nec. Risus feugiat in ante
                            metus dictum at tempor commodo
                            ullamcorper. Enim nunc faucibus a
                            pellentesque sit. Pretium nibh ipsum
                            consequat nisl vel pretium lectus quam.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_sent">OTP sent on your email abc@yopmail.com</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="set_password">Set Password</string>
    <string name="set_new_password">Please set your new password</string>
    <string name="contact_no">Contact no.</string>
    <string name="facebook_app_id">2670258426605567</string>
    <string name="fb_login_protocol_scheme">fb2670258426605567</string>
    <string name="appointments">Appointments</string>
    <string name="today_s_appointments">Today\'s Appointments</string>
    <string name="patient_name">Patient Name:</string>
    <string name="patient_name_">Patient Name</string>
    <string name="name">name</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="appointment_time">Appointment Time:</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="city_town">City/Town</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postalcode">Postalcode</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="profile">Profile</string>
    <string name="dd_mm_yyy">DD-MM-YYY</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="_00">+00</string>
    <string name="start">Start</string>
    <string name="patients">Patients</string>
    <string name="patientname">Name -</string>
    <string name="age">Age -</string>
    <string name="gender_">Gender -</string>
    <string name="address_">Address -</string>
    <string name="phone_">Phone no. -</string>
    <string name="email_">Email -</string>
    <string name="view_history">View History</string>
    <string name="search_hint">search by doctor name or postcode</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="select_date"><![CDATA[Select date & time for booking an appointment]]></string>
    <string name="review">Review the appointment details</string>
    <string name="confirm">Confirm</string>
    <string name="appointment_date_">Appointment Date -</string>
    <string name="apointment_time">Apointment Time -</string>
    <string name="instructions">Instructions</string>
    <string name="recent_message">Recent Message</string>
    <string name="chats">Chats</string>
    <string-array name="countrycode">
        <item>+972</item>
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+1 684</item>
        <item>+376</item>
        <item>+244</item>
        <item>+1 264</item>
        <item>+1268</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+1 242</item>
        <item>+973</item>
        <item>+880</item>
        <item>+1 246</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+1 441</item>
        <item>+975</item>
        <item>+387</item>
        <item>+267</item>
        <item>+55</item>
        <item>+246</item>
        <item>+359</item>
        <item>+226</item>
        <item>+257</item>
        <item>+855</item>
        <item>+237</item>
        <item>+1</item>
        <item>+238</item>
        <item>+ 345</item>
        <item>+236</item>
        <item>+235</item>
        <item>+56</item>
        <item>+86</item>
        <item>+61</item>
        <item>+57</item>
        <item>+269</item>
        <item>+242</item>
        <item>+682</item>
        <item>+506</item>
        <item>+385</item>
        <item>+53</item>
        <item>+537</item>
        <item>+420</item>
        <item>+45</item>
        <item>+253</item>
        <item>+1 767</item>
        <item>+1 849</item>
        <item>+593</item>
        <item>+20</item>
        <item>+503</item>
        <item>+240</item>
        <item>+291</item>
        <item>+372</item>
        <item>+251</item>
        <item>+298</item>
        <item>+679</item>
        <item>+358</item>
        <item>+33</item>
        <item>+594</item>
        <item>+689</item>
        <item>+241</item>
        <item>+220</item>
        <item>+995</item>
        <item>+49</item>
        <item>+233</item>
        <item>+350</item>
        <item>+30</item>
        <item>+299</item>
        <item>+1 473</item>
        <item>+590</item>
        <item>+1 671</item>
        <item>+502</item>
        <item>+224</item>
        <item>+245</item>
        <item>+595</item>
        <item>+509</item>
        <item>+504</item>
        <item>+36</item>
        <item>+354</item>
        <item>+91</item>
        <item>+62</item>
        <item>+964</item>
        <item>+353</item>
        <item>+972</item>
        <item>+39</item>
        <item>+1 876</item>
        <item>+81</item>
        <item>+962</item>
        <item>+7 7</item>
        <item>+254</item>
        <item>+686</item>
        <item>+965</item>
        <item>+996</item>
        <item>+371</item>
        <item>+961</item>
        <item>+266</item>
        <item>+231</item>
        <item>+423</item>
        <item>+370</item>
        <item>+352</item>
        <item>+261</item>
        <item>+265</item>
        <item>+60</item>
        <item>+960</item>
        <item>+223</item>
        <item>+356</item>
        <item>+692</item>
        <item>+596</item>
        <item>+222</item>
        <item>+230</item>
        <item>+262</item>
        <item>+52</item>
        <item>+377</item>
        <item>+976</item>
        <item>+382</item>
        <item>+1664</item>
        <item>+212</item>
        <item>+95</item>
        <item>+264</item>
        <item>+674</item>
        <item>+977</item>
        <item>+31</item>
        <item>+599</item>
        <item>+687</item>
        <item>+64</item>
        <item>+505</item>
        <item>+227</item>
        <item>+234</item>
        <item>+683</item>
        <item>+672</item>
        <item>+1 670</item>
        <item>+47</item>
        <item>+968</item>
        <item>+92</item>
        <item>+680</item>
        <item>+507</item>
        <item>+675</item>
        <item>+595</item>
        <item>+51</item>
        <item>+63</item>
        <item>+48</item>
        <item>+351</item>
        <item>+1 939</item>
        <item>+974</item>
        <item>+40</item>
        <item>+250</item>
        <item>+685</item>
        <item>+378</item>
        <item>+966</item>
        <item>+221</item>
        <item>+381</item>
        <item>+248</item>
        <item>+232</item>
        <item>+65</item>
        <item>+421</item>
        <item>+386</item>
        <item>+677</item>
        <item>+27</item>
        <item>+500</item>
        <item>+34</item>
        <item>+94</item>
        <item>+249</item>
        <item>+597</item>
        <item>+268</item>
        <item>+46</item>
        <item>+41</item>
        <item>+992</item>
        <item>+66</item>
        <item>+228</item>
        <item>+690</item>
        <item>+676</item>
        <item>+1 868</item>
        <item>+216</item>
        <item>+90</item>
        <item>+993</item>
        <item>+1 649</item>
        <item>+688</item>
        <item>+256</item>
        <item>+380</item>
        <item>+971</item>
        <item>+44</item>
        <item>+1</item>
        <item>+598</item>
        <item>+998</item>
        <item>+678</item>
        <item>+681</item>
        <item>+967</item>
        <item>+260</item>
        <item>+263</item>
        <item>null</item>
        <item>+591</item>
        <item>+673</item>
        <item>+61</item>
        <item>+243</item>
        <item>+225</item>
        <item>+500</item>
        <item>+44</item>
        <item>+379</item>
        <item>+852</item>
        <item>+98</item>
        <item>+44</item>
        <item>+44</item>
        <item>+850</item>
        <item>+82</item>
        <item>+856</item>
        <item>+218</item>
        <item>+853</item>
        <item>+389</item>
        <item>+691</item>
        <item>+373</item>
        <item>+258</item>
        <item>+970</item>
        <item>+872</item>
        <item>+262</item>
        <item>+7</item>
        <item>+590</item>
        <item>+290</item>
        <item>+1 869</item>
        <item>+1 758</item>
        <item>+590</item>
        <item>+508</item>
        <item>+1 784</item>
        <item>+239</item>
        <item>+252</item>
        <item>+47</item>
        <item>+963</item>
        <item>+886</item>
        <item>+255</item>
        <item>+670</item>
        <item>+58</item>

    </string-array>
</resources>