<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.patient.PatientDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/patientsDetailstHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/patients"
            android:textSize="30sp" />
        <ImageView
            android:id="@+id/patientsDetailsImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/patientDetailsLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/patients" />


        <LinearLayout
            android:id="@+id/patientDetailsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patientDetailsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="Name - "
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/patientDetailsDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="Date Of Birth - "
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/patientDetailsAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/patientDetailsGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/gender_"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/patientDetailsAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/address_"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/patientDetailsContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/phone_"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/patientDetailsEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email_"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/patientDetailsViewHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/patientDetailsLayout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_border"
            android:elevation="20dp"
            android:minWidth="60dp"
            android:minHeight="0dp"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:text="@string/view_history"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </RelativeLayout>


</FrameLayout>