<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ForgotPasswordFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/layout_padding"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/forgotPasswordLoader"
            android:layout_width="50dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/forgotLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/layout_name" />

            <RelativeLayout
                android:id="@+id/forgotEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_below="@id/forgotLayout"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvForgotPasswordEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldForgotPasswordEmailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/edit_text"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etForgotPasswordEmail"
                        android:layout_width="@dimen/edit_text"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="0dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

<!--        </LinearLayout>-->

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:text="@string/submit"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:textColor="@color/black" />


        <LinearLayout
            android:id="@+id/forgotBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/forgotAlreadyAccount"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/forgotDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="5dp"
                android:text="@string/don_t_have_an_account"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvForgotSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/sign_up_underline"
                android:textAllCaps="false"
                android:textColor="#295F98"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forgotAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/forgotAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:text="@string/already_have_an_account"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvForgotSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/sign_in_underline"
                android:textAllCaps="false"
                android:textColor="#295F98"
                android:textSize="15sp" />
        </LinearLayout>


    </RelativeLayout>



</FrameLayout>