<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForgotPasswordFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">


        <TextView
            android:id="@+id/resetLayoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/set_password"
            android:textColor="@color/black"
            android:textSize="@dimen/layout_name" />

        <TextView
            android:id="@+id/resetLayoutDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/resetLayoutName"
            android:layout_marginTop="35dp"
            android:text="@string/set_new_password"
            android:textColor="@color/black"
            android:textSize="18sp" />



            <LinearLayout
                android:id="@+id/resetLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/form_text" />

                    <EditText
                        android:id="@+id/etResetPassword"
                        android:layout_width="@dimen/edit_text"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/edit_text_border"
                        android:layout_alignParentEnd="true"
                        android:inputType="textPassword"
                        android:textDirection="anyRtl" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResetConfirmPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/form_text" />

                    <EditText
                        android:id="@+id/etResetConfirmPassword"
                        android:layout_width="@dimen/edit_text"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/edit_text_border"
                        android:inputType="textPassword"
                        android:textDirection="rtl" />

                </RelativeLayout>


            </LinearLayout>


        <!--        </LinearLayout>-->

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/resetLinearLayout"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/black" />


    </RelativeLayout>


</FrameLayout>